# src/pds_doi_service/api/swagger/swagger.yaml
@@ -1,12 +1,12 @@
 openapi: 3.0.0
 info:
   title: Planetary Data System DOI Service API
-  description: PDS API for managing DOI registration with OSTI service.
-  version: "0.1"
+  description: PDS API for managing DOI registration with a DOI service provider (OSTI, DataCite, etc.).
+  version: "0.2"
 servers:
-- url: http://localhost:8080/PDS_APIs/pds_doi_api/0.1
+- url: http://localhost:8080/PDS_APIs/pds_doi_api/0.2
   description: Local host
-- url: https://virtserver.swaggerhub.com/PDS_APIs/pds_doi_api/0.1
+- url: https://virtserver.swaggerhub.com/PDS_APIs/pds_doi_api/0.2
   description: SwaggerHub API Auto Mocking
 tags:
 - name: dois
@@ -66,10 +66,10 @@ paths:
           items:
             type: string
         example: review
-      - name: lid
+      - name: ids
         in: query
-        description: List of LIDs to filter DOIs by. An LID may include the VID appended
-          to the end. Each LID or LIDVID may also contain one or more Unix-style wildcards (*) to pattern match against.
+        description: List of PDS identifiers to filter DOIs by. Each identifier may
+          contain one or more Unix-style wildcards (*) to pattern match against.
         required: false
         style: form
         explode: true
@@ -78,34 +78,32 @@ paths:
           items:
             type: string
         examples:
-          lid:
-            value: 'urn:nasa:pds:lab_shocked_feldspars'
-          lidvid:
+          pds4:
             value: 'urn:nasa:pds:lab_shocked_feldspars::1.0'
+          pds3:
+            value: 'LRO-L-MRFLRO-2/3/5-BISTATIC-V3.0'
       - name: start_date
         in: query
         description: A start date to filter resulting DOI records by. Only records
-          with an update time after this date will be returned. Value must be of the
-          form \<YYYY\>-\<mm\>-\<dd\>T\<HH\>:\<MM\>:\<SS\>.\<ms\>
+          with an update time after this date will be returned. Value must be a
+          valid isoformat string of the form \<YYYY\>-\<mm\>-\<dd\>[T\<HH\>:\<MM\>:\<SS\>.\<ms\>]
         required: false
         style: form
         explode: true
         schema:
           type: string
-          format: date-time
-        example: 2020-01-01T19:02:15.000000
+        example: 2020-01-01T00:00:00.00
       - name: end_date
         in: query
         description: An end date to filter resulting DOI records by. Only records
-          with an update time prior to this date will be returned. Value must be of
-          the form \<YYYY\>-\<mm\>-\<dd\>T\<HH\>:\<SS\>.\<ms\>
+          with an update time prior to this date will be returned. Value must be a
+          valid isoformat string of the form \<YYYY\>-\<mm\>-\<dd\>[T\<HH\>:\<SS\>.\<ms\>]
         required: false
         style: form
         explode: true
         schema:
           type: string
-          format: date-time
-        example: 2020-12-311T23:59:00.000000
+        example: 2020-12-31T23:59:00.00
       responses:
         "200":
           description: Success
@@ -207,7 +205,7 @@ paths:
               example:
               - creation_date: 2021-03-09T00:00:00Z
                 doi: 10.17189/29476
-                lidvid: urn:nasa:pds:lab_shocked_feldspars::1.0
+                identifier: urn:nasa:pds:lab_shocked_feldspars::1.0
                 node: eng
                 record: |
                   <?xml version="1.0" encoding="UTF-8"?>
@@ -232,19 +230,24 @@ paths:
         "500":
           description: Internal error
       x-openapi-router-controller: pds_doi_service.api.controllers.dois_controller
-  /dois/{lidvid}:
+  /doi:
+    description: >-
+      Endpoint for submitting or fetching a single DOI record.
+      This endpoint corresponds to the /dois/{lidvid} endpoint of v0.1 of the API.
+      However, since certain lidvids were observed to contain forward slashes ('/'),
+      this version now expects the lidvid (now called identifier) as part of the query.
     get:
       tags:
       - dois
       description: Get the status of a DOI from the transaction database.
       operationId: get_doi_from_id
       parameters:
-      - name: lidvid
-        in: path
-        description: The LIDVID associated with the record to status or update.
+      - name: identifier
+        in: query
+        description: The PDS identifier associated with the record to fetch.
         required: true
-        style: simple
-        explode: false
+        style: form
+        explode: true
         schema:
           type: string
         example: 'urn:nasa:pds:lab_shocked_feldspars::1.0'
@@ -258,7 +261,7 @@ paths:
               example:
               - creation_date: 2021-03-09T00:00:00Z
                 doi: 10.17189/29476
-                lidvid: urn:nasa:pds:lab_shocked_feldspars::1.0
+                identifier: urn:nasa:pds:lab_shocked_feldspars::1.0
                 node: eng
                 record: |
                   <?xml version="1.0" encoding="UTF-8"?>
@@ -287,12 +290,12 @@ paths:
       description: Update the record associated with an existing DOI.
       operationId: put_doi_from_id
       parameters:
-      - name: lidvid
-        in: path
-        description: The LIDVID associated with the record to status or update.
+      - name: identifier
+        in: query
+        description: The PDS identifier associated with the record to update.
         required: true
-        style: simple
-        explode: false
+        style: form
+        explode: true
         schema:
           type: string
         example: 'urn:nasa:pds:lab_shocked_feldspars::1.0'
@@ -329,19 +332,24 @@ paths:
         "501":
           description: Not implemented
       x-openapi-router-controller: pds_doi_service.api.controllers.dois_controller
-  /dois/{lidvid}/submit:
+  /doi/submit:
+    description: >-
+      Endpoint for submitting a DOI record for review by the Engineering Node.
+      This endpoint corresponds to the /dois/{lidvid}/submit endpoint of v0.1 of the API.
+      However, since certain lidvids were observed to contain forward slashes ('/'),
+      this version now expects the lidvid (now called identifier) as part of the query.
     post:
       tags:
       - dois
       description: Move a DOI record from draft/reserve status to "review".
       operationId: post_submit_doi
       parameters:
-      - name: lidvid
-        in: path
-        description: The LIDVID associated with the record to submit for review.
+      - name: identifier
+        in: query
+        description: The PDS identifier associated with the record to submit for review.
         required: true
-        style: simple
-        explode: false
+        style: form
+        explode: true
         schema:
           type: string
         example: urn:nasa:pds:lab_shocked_feldspars::1.0
@@ -365,26 +373,26 @@ paths:
         "400":
           description: Can not be released
         "404":
-          description: No entry found for LIDVID
+          description: No entry found for identifier
         "500":
           description: Internal error
       x-openapi-router-controller: pds_doi_service.api.controllers.dois_controller
 # TODO: This routing endpoint has been commented out to effectively block access
 #       to the API's release endpoint until an authentication scheme can
 #       be incorporated to ensure only the Engineering node has access.
-#  /dois/{lidvid}/release:
+#  /doi/release:
 #    post:
 #      tags:
 #      - dois
 #      description: Move a DOI record from draft/reserve/review status to "release".
 #      operationId: post_release_doi
 #      parameters:
-#      - name: lidvid
+#      - name: identifier
 #        in: path
-#        description: The LIDVID associated with the record to release.
+#        description: The PDS identifier associated with the record to release.
 #        required: true
-#        style: simple
-#        explode: false
+#        style: form
+#        explode: true
 #        schema:
 #          type: string
 #        example: 'urn:nasa:pds:lab_shocked_feldspars::1.0'
@@ -408,7 +416,7 @@ paths:
 #        "400":
 #          description: Can not be released
 #        "404":
-#          description: No entry found for LIDVID
+#          description: No entry found for identifier
 #        "500":
 #          description: Internal error
 #      x-openapi-router-controller: pds_doi_service.api.controllers.dois_controller
@@ -490,7 +498,7 @@ components:
       properties:
         doi:
           type: string
-        lidvid:
+        identifier:
           type: string
         title:
           type: string
@@ -506,7 +514,7 @@ components:
       example:
         node: eng
         submitter: my.email@node.gov
-        lidvid: urn:nasa:pds:lab_shocked_feldspars::1.0
+        identifier: urn:nasa:pds:lab_shocked_feldspars::1.0
         title: Laboratory Shocked Feldspars Collection
         update_date: 2001-01-23T04:56:07.000+00:00
         doi: 10.17189/21734
